--- a/djangoerp/themes/default/static/css/screen.css
+++ b/djangoerp/themes/default/static/css/screen.css
@@ -304,10 +304,9 @@ table td ul.actions {
     padding: 8px;
     font-size: 0;
     background: no-repeat center center;
-    margin: 0 5px;
 }
 
-td .yes, td .no {
+td > .yes, td > .no {
     display: block;
     margin: 0 auto;
 }
@@ -551,6 +550,18 @@ td .yes, td .no {
     border-right: 1px solid #c0c0c0;
     padding-right: 20px;
     margin-right: 10px;
+}
+
+#userarea a.notification-counter {
+    padding: 2px 6px 0;
+    margin-left: 10px;
+    color: #fff;
+    background: #ce0600;
+}
+
+#userarea a.notification-counter:hover {
+    background: #c0c0c0;
+    color: #1f1f1f;
 }
 
 #bookmarks {
