--- a/djangoerp/themes/default/templates/menus/bookmark_list.html
+++ b/djangoerp/themes/default/templates/menus/bookmark_list.html
@@ -12,6 +12,4 @@
     {% add_crumb 'My Bookmarks' %}
 {% endblock %}
 
-{% block title %}
-<h1>{% trans "My Bookmarks" %}</h1>
-{% endblock %}
+{% block model-title %}{% trans "My Bookmarks" %}{% endblock %}
