--- a/djangoerp/themes/default/templates/notifications/notification_list.html
+++ b/djangoerp/themes/default/templates/notifications/notification_list.html
@@ -12,6 +12,4 @@
     {% add_crumb 'My Notifications' %}
 {% endblock %}
 
-{% block title %}
-<h1>{% trans "My Notifications" %}</h1>
-{% endblock %}
+{% block model-title %}{% trans "My Notifications" %}{% endblock %}
