--- a/djangoerp/menus/templates/menus/menu.html
+++ b/djangoerp/menus/templates/menus/menu.html
@@ -1,12 +1,14 @@
 {% load i18n %}
+{% load basefuncs %}
 {% load menus %}
 
-<ul id="{{ slug }}-menu" class="menu">
+<ul id="{{ slug }}-menu" class="{% block menu_css %}menu{% endblock %}">
 {% for link in links %}
     {% if link.authorized and link.get_absolute_url %}
-    {% block menulink %}
-    {% score_link link request.get_full_path as css_class %}
-    <li{% if css_class %} class="{{ css_class }}"{% endif %} id="{{ link.slug|escape }}-link">
+    {% block menu-link %}
+    {% score_link link request.get_full_path as active_css_class %}
+    {% join ' ' active_css_class css_class as style %}
+    <li{% if style %} class="{{ style }}"{% endif %} id="{{ link.slug|escape }}-link">
         {% with link.description|default:link.title|striptags as link_title %}
         <a{% if link.new_window %} target="_blank"{% endif %} title="{% trans link_title %}" href="{{ link.get_absolute_url|escape }}">
             {% trans link.title|escape %}
