Replaced default Django's User model with custom one. Added new "get_model" util to "core" app. Fixed signals and tests handling of custom user class.

--- a/djangoerp/themes/default/templates/auth/user_detail.html
+++ b/djangoerp/themes/default/templates/auth/user_detail.html
@@ -32,7 +32,7 @@
 
 {% block main %}
 {% avatar object|get:"email" 90 %}
-{% with field_list="[['username', 'full_name'], ['groups', 'is_active'], ['is_staff', 'is_superuser'], ['date_joined', 'last_login']]" %}
+{% with field_list="[['username', 'email'], ['groups', 'is_active'], ['is_staff', 'is_superuser'], ['date_joined', 'last_login']]" %}
 {{ block.super }}
 {% endwith %}
 {% endblock %}
