Back URL is now stored in form action.

--- a/djangoerp/themes/default/templates/base_form.html
+++ b/djangoerp/themes/default/templates/base_form.html
@@ -29,7 +29,7 @@
 {% endblock %}
 
 {% block main %}
-{% block formheader %}<form method="post" action="{{ request.get_full_path }}{% if next %}{% if request.get_full_path|last == '/' %}?{% else %};{% endif %}next={{ next }}{% endif %}">{% endblock %}
+{% block formheader %}<form method="post" action="{{ request.get_full_path }}{% if next %}{% if request.get_full_path|last == '/' %}?{% else %};{% endif %}next={{ next }}{% endif %}{% if back %}{% if request.get_full_path|last == '/' %}?{% else %};{% endif %}back={{ back }}{% endif %}">{% endblock %}
     {% csrf_token %}
     {% block formcontent_prefix %}{% endblock %}
     {% block formcontent %}
