--- a/djangoerp/themes/default/templates/base_confirm_delete.html
+++ b/djangoerp/themes/default/templates/base_confirm_delete.html
@@ -17,10 +17,8 @@
 {% endblock %}
 
 {% block formcontent %}
-{% blocktrans with object|model_name as model %}
-<h3>Are you sure you want to <strong>delete</strong> this {{ model }}?</h3>
+<h3>{% block deletion-message %}{% blocktrans with object|model_name as model %}Are you sure you want to <strong>delete</strong> this {{ model }}?{% endblocktrans %}{% endblock %}</h3>
 <p>Please, keep in mind this operation is <strong>irreversible</strong>...</p>
-{% endblocktrans %}
 {% endblock %}
 
 {% block formbuttons %}
