--- a/djangoerp/themes/default/static/css/screen.css
+++ b/djangoerp/themes/default/static/css/screen.css
@@ -101,14 +101,15 @@ form label {
 form input, form select, form textarea {
     clear: left;
     float: left;
-    font-style: normal;
-    border: 1px solid #c0c0c0;
     margin-right: 10px;
+    padding: 3px;
+    border: 1px solid #c0c0c0;
+    font-style: normal;
+    outline: none;
 }
 
 form input { 
     width: 80%;
-    padding: 3px;
     max-width: 300px;
 }
 
@@ -122,19 +123,12 @@ form textarea {
     width: 99%;
     max-width: 665px;
     height: 150px;
-    padding: 2px;
 }
 
 form input[type="checkbox"] {
     width: auto;
     margin-right: 10px;
     margin-top: 3px;
-}
-
-.formset textarea {
-    max-width: 500px;
-    min-height: 18px;
-    height: 18px;
 }
 
 form .helptext {
