--- a/djangoerp/themes/default/templates/auth/login.html
+++ b/djangoerp/themes/default/templates/auth/login.html
@@ -5,22 +5,19 @@
 
 {% block meta_title %}{% trans 'Login' %}{% endblock %}
 
+{% block bodyclass %}login{% endblock %}
+
 {% block breadcrumbs %}
     {% add_crumb 'Home' '/' %}
     {% add_crumb 'Login' %}
 {% endblock %}
 
-{% block title %}
-<h1>{% trans 'Login' %}</h1>
-{% endblock %}
-
 {% block main %}
-<p>{% blocktrans %}Login using your <strong>username</strong> and <strong>password</strong>.{% endblocktrans %}</p>
 <form method="post" action=".">
     {% csrf_token %}
     <input type="hidden" name="next" value="{{ next }}" />
     {{ form.as_p }}
-    <span class="submit"><input type="submit" value="{% trans 'Login' %}" /></span>
+    <span class="submit"><button>{% trans 'Login' %}</button></span>
 </form>
 {% endblock %}
 
