--- a/djangoerp/themes/default/templates/base.html
+++ b/djangoerp/themes/default/templates/base.html
@@ -28,7 +28,7 @@
     {% endblock %}
 </head>
 
-<body>
+<body class="{% if is_popup %}popup {% endif %}{% block bodyclass %}{% endblock %}">
     <div id="container">
         <header id="header">
             <hgroup id="branding">
@@ -56,7 +56,7 @@
                 {% endblock %} 
  		    </section>
  		    <section id="main">
-                <section id="messages">
+                <section class="messages">
                     {% include "elements/messages.html" %}
                 </section>
                 <header>
