Added cancel button to admin login form.

--- a/djangoerp/themes/default/static/css/screen.css
+++ b/djangoerp/themes/default/static/css/screen.css
@@ -888,6 +888,7 @@ body.login #main form textarea {
     border: 1px solid #ffda88;
 }
 
+body.login #main form .cancel a,
 body.login #main form .submit button {
     width: auto;
     margin-top: 20px;
